# catastrophic-chip8

./: CMakeLists.txt  README.md  chip8-technical.txt  main.c
catastrophic-chip8/: chip8.c  chip8.h  instructions.c  instructions.h  vm.c  vm.h
libs/: argtable3.c
planning/: prog-outline.c
rf/: mystdlib.c  mystdlib.h  stdutils.c  stdutils.h
roms/: README.md
src/: debug.c  debug.h  instructions.c  instructions.h  types.h  vm.c  vm.h
